management-api/overlays/stage/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: management-api-route53
spec:
    host: management.stage.thoth-station.ninja
    to:
        kind: Service
        name: management-api
    tls:
        caCertificate: ENC[AES256_GCM,data:ija1hjTouwDgPi8FbaXLE3lfJe5mpRJcji3sYRmEYilBN7wlN1fhkblbtvdMb0z5a5PwmXbOYHzQJCIh02msA+BAP/kyUjEDUz4Hh0yRqt2ML6wGmqgGMkg6NOW95Gae8iGSJTSAze9px5CJT3i3bLJeM+h3CCI+fQeOMKpKemltdYXmG99XF7oZC0v5otObWnDLpB5ubsqptQBXkf7mhrHyTRoIVzO4XhNgfAvcIQDlp42Ln8SdCnTHI05XzHjuVqX90uPwad/02kNZ3J+B3gCYcbyKFpSJm4NUO+gSx2TGwN465y5omMSLfeAduNgq2LMfYBtL/QJ6aTVg3bRj7UkKLEX7O+V4P8KLc0H6ijuFzSecu0qIElrMUHvIhrPt5wlOYUP8cyCD1M3kDB3l976X8pfhkDKHNnSqIICTwsorTGsJKfti0MkD3aQ/RjXLNetHXDDnC [...]
        certificate: ENC[AES256_GCM,data:cGg0cehf+GCqWLjbVFx/Lc4kKm2J16VBEy4CBxlIy0vVXE0gYyCDVjwrnvEMLlkAYSW/PaESNhJa/2k+7gQKiqGwAqAgOZ6N9P4F/uk/j68zUOO/QoGZA7xvxkuMu7sRCVKN8ijamfqw88EJlVpP2FgIKLyhDuz/paaEPsXb4Tt+tWGNOfOcqk2hSEBmifaz3Fx82o18eO1w/i9v4rHGf/9vLuxEgKhuVEJEugldRmsshNHNCJiHSyIMu0Avs0l5sqCKjLTKyCRRmB1HLHFiemK0q8sXYMEiHgKZOuNsV1RV9pf8g/WbVt3apS3q4nitNqWI/YAf7beUHIN4TsfQaiKxiosvBxsfyeNTAV0vLD+ryo+s9vUvYka/plmWEGoyfdmOxgPzSYPyc2fIuHp07pG+HRx3rLcBCpITovkecX+zJG7q6KAY/crknkvF79CXQag+pf0p7Hh [...]
        key: ENC[AES256_GCM,data:6RmVoOyvF/zgB/X8syYhcyntK6ro87/IiZXrJBhsP2Bq5OSOjjpaD+mWbFpg4AxWiTbOmuhiT2H88IqTizwRCJw6O2I/OmVVx7KkDXviwZip9yRo/S8WaENlzg/qos6PDe/K6RfUyV8okfpV8kKDpKdRAn7UeoqJu4fy5iqx1iYI39CHPJ5iQu3+xCWIcRqjqGhTogTjXpfHzpADmC3JRYNE6LkjFj+278oqGbSrX9prpNo94ctKTOaRyhLPx4PcoSuFSe15LrvX9MWOjwaSIj2F04dslcr84CQCas42J7209I38hQB7iQkY5EDiuNbblhaUKKmz6fsP8PioT23ll6WXf+xgsLfG3RJ/qj1yAczRFjJGrW8mD9SDbHeNAXlD81S/QW4XnnZ6rEeomjMG21MtfrqAuO7YFQ7i5t3v6d6fbpCtCFOZ12H9BCA27sNs4hHl/lDr2Y9tRD0fqgy [...]
        termination: ENC[AES256_GCM,data:8F6SOA==,iv:1dKg1ZKBWzNyyfg41+98cXTB3aFk7+iwSE7Jgpc3X5Y=,tag:2dErPn6j5LLhoDsmk1A68w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-12-13T17:55:57Z'
    mac: ENC[AES256_GCM,data:ekes0qaJfLUfxJE2bwgANUwHQtbLLTFJz1MoKZW/O7Hwgf0ImQDOTJROVc8eedUYjnM6FRwOC62bkQrJTs672lnotWn65kODBDl6Y2PnPCzFcucw89RiLCqfYP1YHI2B1iLl7SrRO0MYA7OzeSMgD3gvSLTgiCPzrZGVUYWYrws=,iv:pQqGC1gBGQLrC8iWu47o0hsVLR6MGLzCgK0eL3b2kuM=,tag:DuYZ74kPsZh6oP/Uuy7Jpw==,type:str]
    pgp:
    -   created_at: '2020-12-13T17:55:57Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//fORzhWXDNutZMEGREE/Dtk7U4blQ+BzBeqylxO2pAaig
[...]
            =G6iV
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-12-13T17:55:57Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQgAj3ctWYGkAHwt3nZjOMWd4H60tmi2XGr4qR4jZXf/6U4F
[...]
            pIitNyYVy9ZcemA9xJhixE0EimDXaAQs2qSiVOrr4Q==
            =TZUV
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-12-13T17:55:57Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/QIDtElvOof2Ee72gePsP4BiVBcdH3topeMBubVBP7VTF
[...]
            6oJr6yYi0C/hKT016+WzLCK1ln76N9OQ3fZrWmgJdQ==
            =9BA0
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
