management-api/overlays/stage/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: management-api-route53
spec:
  host: management.stage.thoth-station.ninja
  to:
    kind: Service
    name: management-api
    termination: passthrough
